objects/Event__c.object
<CustomObject>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Seats__c</fullName>
        <formula>Maximum_Attendees__c - Registered_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_Seats__c</fullName>
        <label>Registered Seats</label>
        <summaryFilterItems>
            <field>Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Attendees__c</fullName>
        <label>Maximum Attendees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Virtual_Event</fullName>
        <active>true</active>
        <label>Virtual Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Person_Event</fullName>
        <active>true</active>
        <label>In-Person Event</label>
    </recordTypes>
    <validationRules>
        <fullName>Future_Event_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Event_Date__c &lt;= TODAY()</errorConditionFormula>
        <errorMessage>Event Date should be in the future</errorMessage>
    </validationRules>
</CustomObject>